solves minor spacing issues on reviews

--- a/src/styles/RecentReviews.css
+++ b/src/styles/RecentReviews.css
@@ -3,9 +3,10 @@
 }
 
 #title {
-  padding-top: 20px;
+  padding-top: 60px;
   text-align: center;
   font-family: 'Lato';
+  font-weight: bold;
 }
 
 
